# optiz

./: .clang-format  CMakeLists.txt
docs/: examples.optiz  grammar.txt
include/fe/: AST.hpp  ASTPrinter.hpp  ASTVisitor.hpp  Diagnostic.hpp  Lexer.hpp  Parser.hpp  SrcLocation.hpp
src/: main.cpp
src/fe/: AST.cpp  ASTPrinter.cpp  Diagnostic.cpp  Lexer.cpp  Parser.cpp  SrcLocation.cpp
